# autogen-examples

./: .gitignore  README.md  invoice_output.json  pyproject.toml
.chainlit/: config.toml
auto_gen/: Assistant_stream.py  database_gaurdrails.py  tools.yaml
auto_gen/agents/: agent.py  implementing_agent.ipynb  message_communcation.ipynb  tools.ipynb  tools.py  workbench_and_mcp.ipynb
auto_gen/agents/multi-agents/: concurrent_agents.ipynb  group_chat.ipynb  handoff.py
auto_gen/chainlit_chatbot/: main.py  my_cl_app.py
auto_gen/streamlit_chatbot/: main.py  terminal_chat.py  test.py
auto_gen/taipy_chatbot/learning/: start.py  visual_elements.py
src/auto_gen_examples/: database.py  file_handling.ipynb  logger.py
src/auto_gen_examples/agents/multi-agents/: sequential_workflow.ipynb
src/auto_gen_examples/docker/: code_executor.ipynb  pyproject.toml
src/auto_gen_examples/docker/coding/: tmp_code_270b74b729720f753decfb74b6481b82bf0ff6d592b92668432269a6caa7a19d.python  tmp_code_f57715f861383f19b0c4e58d17bd60c4586cbbda233ab8d8c2f157caf9537fbf.python
src/auto_gen_examples/docker/src/docker_examples/: agent.py
src/auto_gen_examples/streamlit_chatbot/: main.py
src/autogen_examples/01_basics/: AssisantAgent.py  browsing.py  starting.py
src/autogen_examples/02_multi-agents/: cliexe.ipynb  dvd_tools.yaml  tools.ipynb
src/autogen_examples/02_multi-agents/multi-agents/: group_chat.py
src/autogen_examples/04_code_executors/: Dockerfile  code_executor.ipynb  multi_agent_code_executor.ipynb  pyproject.toml
src/autogen_examples/04_code_executors/coding/: tmp_code_44492202d3fbac13c9dee8d1f7474d5b2b0869cccd96ed43c3d6980c243f3268.python  tmp_code_aa89300f9ab34fbb42eb31a76f09a1df75eea0ab39db8541ecae7824570a7b61.python
src/autogen_examples/04_code_executors/src/docker_examples/: __init__.py
src/autogen_examples/07_tools_integrations/: postgres.py  tools.yaml
