[project]
name = "autogen-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio-atexit>=1.0.1",
    "autogen>=0.9.6",
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext[docker]>=0.6.4",
    "chainlit>=2.6.3",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "marshmallow==3.19",
    "mcp>=1.11.0",
    "openai>=1.95.1",
    "plotly>=6.2.0",
    "pyarrow>=10.0.0",
    "pydotenv>=0.0.7",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.1",
    "taipy>=3.0.0",
    "tiktoken>=0.9.0",
]

[tool.uv.workspace]
members = [
    "auto_gen/docker",
]
