[project]
name = "docker-examples"
version = "0.1.0"
description = "AutoGen Docker Examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.7.1",
    "autogen-core>=0.7.1",
    "autogen-ext[docker]>=0.7.1",
    "matplotlib",
    "pandas",
    "numpy",
    "seaborn",
    "polars",
    "jupyter",
    "ipykernel",
    "openai",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docker_examples"]
